--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "mdbootstrap": "^4.7.3",
+    "pure-react-carousel": "^1.18.0",
     "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
+    "react-responsive-carousel": "^3.1.47",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-slick": "^0.23.2",
+    "react-toastify": "^4.5.2",
+    "react-toastr": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
